--- a/index.html
+++ b/index.html
@@ -24,11 +24,174 @@
         </nav>
     </header>
     <main>
-        <div>Hello</div>
+       <section id="feedback">
+        <div class="container feedback__container">
+        <div class="form_container">
+            <div class="form_title">Trial Class</div>
+            <form>
+                <input type="text" id="fname" name="fname" placeholder="Enter your name">
+                <input type="phone" id="phone" name="phone" placeholder="Enter your phone">
+                <select id="class_list">
+                    <option data-display="Choose your class">Nothing</option>
+                    <option value="1">Some option</option>
+                    <option value="2">Another option</option>
+                    <option value="3" disabled>A disabled option</option>
+                    <option value="4">Potato</option>
+                </select>
+                  <input type="submit" id="form_button" value="Try it">
+            </form>
+        </div>
+        <div class="feedback__lozung">
+            <div class="lozung_title">JUST BALANCE</div>
+            <div class="lozung_title">YOUR MIND & BODY</div>
+            <div class="lozung_subtitle">Create the healthy living for yourself</div>
+        </div>
+    </div>
+       </section>
+
+       <section id="our_classes">
+        <div class="container our-classes__container">
+            <div class="title our-classes__title">YOGA FEATURE PROGRAM</div>
+            <div class="title our-classes__subtitle">Our Classes</div>
+            <div class="our-classes__rows">
+                <div class="our-classes__item">
+                    <div class="our-classes-item__img"><img src="./assets/img/img-01.jpg"/></div>
+                    <div class="our-classes-item__text">
+                        <div class="item-text__title">YOGA FOR HEALTH</div>
+                        <div class="item-text__description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat consectetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
+                        <div class="item-text__author">Ashtanga - Hatha</div>
+                    </div>
+                </div>
+                <div class="our-classes__item">
+                    <div class="our-classes-item__img"><img src="./assets/img/img-02.jpg"/></div>
+                    <div class="our-classes-item__text">
+                        <div class="item-text__title">YOGA FOR LOSE WEIGHT</div>
+                        <div class="item-text__description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat consectetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
+                        <div class="item-text__author">Ashtanga - Hatha</div>
+                    </div>
+                </div>
+                <div class="our-classes__item">
+                    <div class="our-classes-item__img"><img src="./assets/img/img-03.jpg"/></div>
+                    <div class="our-classes-item__text">
+                        <div class="item-text__title">YOGA FOR CHILDREN</div>
+                        <div class="item-text__description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat consectetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
+                        <div class="item-text__author">Ashtanga - Hatha</div>
+                    </div>
+                </div>
+                <div class="our-classes__item">
+                    <div class="our-classes-item__img"><img src="./assets/img/img-04.jpg"/></div>
+                    <div class="our-classes-item__text">
+                        <div class="item-text__title">YOGA FOR ELDERLY</div>
+                        <div class="item-text__description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat consectetur adipisicing elit, sed do eiusmod tempor incididunt.</div>
+                        <div class="item-text__author">Ashtanga - Hatha</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+       </section>
+
+       <section id="photo-grid">
+            <div class="photo-grid__rows">
+                <div class="photo-grid-item"><img src="./assets/img/img-05.jpg"/></div>
+                <div class="photo-grid-item"><img src="./assets/img/img-06.jpg"/></div>
+                <div class="photo-grid-item"><img src="./assets/img/img-07.jpg"/></div>
+                <div class="photo-grid-item"><img src="./assets/img/img-08.jpg"/></div>
+            </div>
+                <div class="photo-grid__rows">
+                <div class="photo-grid-item"><img src="./assets/img/img-09.jpg"/></div>
+                <div class="photo-grid-item"><img src="./assets/img/img-10.jpg"/></div>
+                <div class="photo-grid-item"><img src="./assets/img/img-11.jpg"/></div>
+                <div class="photo-grid-item"><img src="./assets/img/img-12.jpg"/></div>
+            </div>
+       </section>
+
+       <section id="about-us">
+        <div class="container about-us__container">
+            <div class="about-us__text">
+                <div class="title about-us__title">ABOUT US</div>
+                <div class="about-us__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation toui ullamcomi laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor it in lorei voluptate velit esse cillum dolore eu fugiat nulla pariatur lorem ispum
+                    loting sokui.</div>
+            </div>
+            <div class="slider_wrap">
+            <div class="slider__container">
+                <div class="photo__slider">
+                    <div class="photo__slick__container">
+                        <div class="about-us__image"><img src="./assets/img/img-13.jpg"></div>
+                    </div>
+                        <div class="photo__slick__container">
+                            <div class="about-us__image"><img src="./assets/img/img-13.jpg"></div>
+                        </div>
+                        </div>  
+                </div>
+                <div class="photo__slider-arrow"></div>
+            </div>
+            </div>
+       </section>
+
+       <section id="icons">
+        <div class="container icons__container">
+            <div class="icons__grid">
+                <div class="icons-grid__item">
+                    <div class="icons__img"><img src="./assets/img/ico-01.png"/></div>
+                    <div class="title icons__title">IMPROVED OVERALL HEALTH</div>
+                    <div class="icons__description">Enim ad minim veniam, quis nostrud exercitation toui ullamcomi
+                        laboris nisi ut aliquip ex ea com.</div>
+                </div>
+                <div class="icons-grid__item">
+                    <div class="icons__img"><img src="./assets/img/ico-02.png"/></div>
+                    <div class="title icons__title">IMPROVED OVERALL HEALTH</div>
+                    <div class="icons__description">Enim ad minim veniam, quis nostrud exercitation toui ullamcomi
+                        laboris nisi ut aliquip ex ea com.</div>
+                </div>
+                <div class="icons-grid__item">
+                    <div class="icons__img"><img src="./assets/img/ico-03.png"/></div>
+                    <div class="title icons__title">IMPROVED OVERALL HEALTH</div>
+                    <div class="icons__description">Enim ad minim veniam, quis nostrud exercitation toui ullamcomi
+                        laboris nisi ut aliquip ex ea com.</div>
+                </div>
+                <div class="icons-grid__item">
+                    <div class="icons__img"><img src="./assets/img/ico-04.png"/></div>
+                    <div class="title icons__title">IMPROVED OVERALL HEALTH</div>
+                    <div class="icons__description">Enim ad minim veniam, quis nostrud exercitation toui ullamcomi
+                        laboris nisi ut aliquip ex ea com.</div>
+                </div>
+                <div class="icons-grid__item">
+                    <div class="icons__img"><img src="./assets/img/ico-05.png"/></div>
+                    <div class="title icons__title">IMPROVED OVERALL HEALTH</div>
+                    <div class="icons__description">Enim ad minim veniam, quis nostrud exercitation toui ullamcomi
+                        laboris nisi ut aliquip ex ea com.</div>
+                </div>
+                <div class="icons-grid__item">
+                    <div class="icons__img"><img src="./assets/img/ico-06.png"/></div>
+                    <div class="title icons__title">IMPROVED OVERALL HEALTH</div>
+                    <div class="icons__description">Enim ad minim veniam, quis nostrud exercitation toui ullamcomi
+                        laboris nisi ut aliquip ex ea com.</div>
+                </div>
+                <div class="icons-grid__item">
+                    <div class="icons__img"><img src="./assets/img/ico-07.png"/></div>
+                    <div class="title icons__title">IMPROVED OVERALL HEALTH</div>
+                    <div class="icons__description">Enim ad minim veniam, quis nostrud exercitation toui ullamcomi
+                        laboris nisi ut aliquip ex ea com.</div>
+                </div>
+                <div class="icons-grid__item">
+                    <div class="icons__img"><img src="./assets/img/ico-08.png"/></div>
+                    <div class="title icons__title">IMPROVED OVERALL HEALTH</div>
+                    <div class="icons__description">Enim ad minim veniam, quis nostrud exercitation toui ullamcomi
+                        laboris nisi ut aliquip ex ea com.</div>
+                </div>
+            </div>
+        </div>
+       </section>
 
     </main>
     <footer>
 
     </footer>
+    <script src="./assets/js/jQuery v3.6.1.js"></script>
+<script src="./assets/js/jquery.nice-select.min.js"></script>
+<script src="./assets//js/script.js"></script>
+<script src="./assets/js/slick.min.js"></script>
+
 </body>
 </html>
